Added get Dr Schedule
